Moved ros_designators to a subdir, to eventually mimic the layout used by pi_trees

--- a/designators/package.xml
+++ b/designators/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package>
-  <name>ros-designators</name>
+  <name>designators</name>
   <version>0.0.0</version>
-  <description>ROS designators are a way to defer the full resolution of a robot goal to runtime.
+  <description>Designators are a way to defer the full resolution of a robot goal to runtime.
     E.g. For a robot to drive to some person, then first the location of that person may be known.
     A designator encapsulates the process to resolve or query the world state and get, for example, a location.</description>
 
@@ -17,11 +17,6 @@
   <!-- TODO: Use test_depend for packages you need only for testing: -->
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>geometry_msgs</build_depend>
-  <build_depend>rospy</build_depend>
-  <run_depend>geometry_msgs</run_depend>
-  <run_depend>rospy</run_depend>
-
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
