--- a/designators/CMakeLists.txt
+++ b/designators/CMakeLists.txt
@@ -1,13 +1,10 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(ros-designators)
+project(designators)
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
-find_package(catkin REQUIRED COMPONENTS
-  geometry_msgs
-  rospy
-)
+find_package(catkin REQUIRED COMPONENTS)
 
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
