Added a new package for psi queries

--- a/psi_designators/CMakeLists.txt
+++ b/psi_designators/CMakeLists.txt
@@ -1,19 +1,23 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(designators)
+project(psi_designators)
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
-find_package(catkin REQUIRED COMPONENTS)
+find_package(catkin REQUIRED COMPONENTS
+  psi
+  rospy
+  designators
+)
 
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
 
 
-# Uncomment this if the package has a setup.py. This macro ensures
-# modules and global scripts declared therein get installed
-# See http://ros.org/doc/api/catkin/html/user_guide/setup_dot_py.html
-catkin_python_setup()
+## Uncomment this if the package has a setup.py. This macro ensures
+## modules and global scripts declared therein get installed
+## See http://ros.org/doc/api/catkin/html/user_guide/setup_dot_py.html
+# catkin_python_setup()
 
 ################################################
 ## Declare ROS messages, services and actions ##
@@ -63,7 +67,7 @@ catkin_python_setup()
 ## Generate added messages and services with any dependencies listed here
 # generate_messages(
 #   DEPENDENCIES
-#   geometry_msgs
+#   std_msgs  # Or other packages containing msgs
 # )
 
 ###################################
@@ -77,8 +81,8 @@ catkin_python_setup()
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
 #  INCLUDE_DIRS include
-#  LIBRARIES ros-designators
-#  CATKIN_DEPENDS geometry_msgs rospy
+#  LIBRARIES psi_designators
+#  CATKIN_DEPENDS psi rospy
 #  DEPENDS system_lib
 )
 
@@ -94,19 +98,19 @@ include_directories(
 )
 
 ## Declare a cpp library
-# add_library(ros-designators
-#   src/${PROJECT_NAME}/ros-designators.cpp
+# add_library(psi_designators
+#   src/${PROJECT_NAME}/psi_designators.cpp
 # )
 
 ## Declare a cpp executable
-# add_executable(ros-designators_node src/ros-designators_node.cpp)
+# add_executable(psi_designators_node src/psi_designators_node.cpp)
 
 ## Add cmake target dependencies of the executable/library
 ## as an example, message headers may need to be generated before nodes
-# add_dependencies(ros-designators_node ros-designators_generate_messages_cpp)
+# add_dependencies(psi_designators_node psi_designators_generate_messages_cpp)
 
 ## Specify libraries to link a library or executable target against
-# target_link_libraries(ros-designators_node
+# target_link_libraries(psi_designators_node
 #   ${catkin_LIBRARIES}
 # )
 
@@ -125,7 +129,7 @@ include_directories(
 # )
 
 ## Mark executables and/or libraries for installation
-# install(TARGETS ros-designators ros-designators_node
+# install(TARGETS psi_designators psi_designators_node
 #   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 #   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 #   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
@@ -150,7 +154,7 @@ include_directories(
 #############
 
 ## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_ros-designators.cpp)
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_psi_designators.cpp)
 # if(TARGET ${PROJECT_NAME}-test)
 #   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
